fix(layout): change header to fixed position to prevent scroll shift

--- a/app/assets/stylesheets/my_custom.scss
+++ b/app/assets/stylesheets/my_custom.scss
@@ -110,7 +110,7 @@ body {
 }
 
 header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
